Changed photo widths to percentages, created but did not implement templates array.

--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
         </ul><a rel='new-photo-drop' href='#'><li><i class='fa fa-plus-square'></i><h3>Add Photo</h3></li></a>
           <form action='index.html' method='post'>
             <div class='new-photo'>
-              <input type='text' id='title' placeholder='Title'/>
+              <input type='text' name='title' placeholder='Title'/>
             </div>
             <div class='new-photo'>
-              <input type='text' id='author' placeholder='Author'/>
+              <input type='text' name='author' placeholder='Author'/>
             </div>
             <div class='new-photo'>
-              <input type='text' id='url' placeholder='URL'/>
+              <input type='text' name='url' placeholder='URL'/>
             </div>
             <div class='new-photo'>
-              <input type='checkbox' id='make-cover' value='option'>
+              <input type='checkbox' name='make-cover' value='option'>
               <label for='option'>Make Cover</label>
             </div>
             <div class='button new-photo'>
-              <button type='add-photo'>Add Photo</button>
+              <button type= "submit" name='add-photo'>Add Photo</button>
             </div>
           </form>
       </nav>
